methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
    for (stepper <-1 to 6){
                 ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (seenBaggle){
  ^