methods.returning.MethodsReturning.scala.code
var seenBaggle : Boolean = false
def haveBaggle():Boolean = {
  if (seenBaggle){
    for (stepper <-1 to 6){
      forward()
      if (isOverBaggle){
        return true
      }else{
        for (stepper1 <- 1 to 6){
          backward()
        }
        right()
        forward()
        left()
      }
    }
  }
}